bootstrap and timeline skeleton.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta http-equiv="x-ua-compatible" content="ie=edge">
-        <title></title>
+        <title>Rodrigo's CV</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -11,17 +11,67 @@
         <!-- Place favicon.ico in the root directory -->
 
         <link rel="stylesheet" href="css/normalize.css">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
         <link rel="stylesheet" href="css/main.css">
+        
+        <link href='http://fonts.googleapis.com/css?family=Lato:400,900' rel='stylesheet' type='text/css'>
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
     </head>
     <body>
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+<div class="container">
+    <header class="page-header">
+        <h1>Rodrigo Valceli Raimundo</h1>
+        <p>B. Sc. Computer Science</p>
+        <p>Contact options</p>
+    </header>
 
-        <!-- Add your site or application content here -->
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+    <div class="clearfix">
+        <h2>Experience</h2>
+        <ul class="timeline">
+            <li><div class="tldate">Apr 2014</div></li>
 
+            <li>
+              <div class="tl-circ"></div>
+              <div class="timeline-panel">
+                <div class="tl-heading">
+                  <h4>Surprising Headline Right Here</h4>
+                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 3 hours ago</small></p>
+                </div>
+                <div class="tl-body">
+                  <p>Lorem Ipsum and such.</p>
+                </div>
+              </div>
+            </li>
+
+            <li class="timeline-inverted">
+              <div class="tl-circ"></div>
+              <div class="timeline-panel">
+                <div class="tl-heading">
+                  <h4>Breaking into Spring!</h4>
+                  <p><small class="text-muted"><i class="glyphicon glyphicon-time"></i> 4/07/2014</small></p>
+                </div>
+                <div class="tl-body">
+                  <p>Hope the weather gets a bit nicer...</p>
+
+                  <p>Y'know, with more sunlight.</p>
+                </div>
+              </div>
+            </li>
+        </ul>
+    </div>
+
+    <div>
+        <h2>Skills</h2>
+    </div>
+
+    <div>
+        <h2>Interests</h2>
+    </div>
+</div>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
         <script src="js/plugins.js"></script>
