--- a/index.html
+++ b/index.html
@@ -51,11 +51,16 @@
         <div class="col-xs-6">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                  <h2 class="panel-title">Experience</h2>
+                  <h2 class="panel-title">Software Development Skills</h2>
                 </div>
                 <div class="panel-body">
                 <ul>
-                    <li></li>
+                    <li>Web Backend: PHP (Yii Framework) and Java (Servlets)</li>
+                    <li>Web Frontend: HTML+CSS+JS (including jQuery and Bootstrap)</li>
+                    <li>Desktop: Java (with Swing) and C++ (with Qt5)</li>
+                    <li>Databases: MySQL, SQLite, MongoDB and Solr</li>
+                    <li>Plain C on Embedded Linux and MCUs</li>
+                    <li>Telephony: OpalVOIP and Asterisk</li>
                 </ul>
                 </div>
             </div>
@@ -63,7 +68,7 @@
         <div class="col-xs-6">
             <div class="panel panel-info">
                 <div class="panel-heading">
-                  <h2 class="panel-title">Skills</h2>
+                  <h2 class="panel-title">Systems Management Skills</h2>
                 </div>
                 <div class="panel-body">
                 <ul>
@@ -78,6 +83,44 @@
             </div>
         </div>
     </div>
+    
+    <div class="row">
+        <div class="col-xs-6">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                  <h2 class="panel-title">CS Knowlegde</h2>
+                </div>
+                <div class="panel-body">
+                <ul>
+                    <li>Object Oriented and Functional Programming</li>
+                    <li>UML and SCRUM</li>
+                    <li>Distributed and Parallel Programming</li>
+                    <li>Data Structures and Algorithms</li>
+                    <li>TCP/IP Family of networking protocols</li>
+                    <li>Computer Architectures</li>
+                </ul>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-6">
+            <div class="panel panel-info">
+                <div class="panel-heading">
+                  <h2 class="panel-title">Other Skills</h2>
+                </div>
+                <div class="panel-body">
+                <ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+                </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+    
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.3.min.js"><\/script>')</script>
