change main job title.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <div class="right">
         <h1>Rodrigo Valceli Raimundo</h1>
-        <p class="title">Software Developer</p> 
+        <p class="title">Software Developer: Full Stack & Operation</p> 
     </div>
     
     <div style="clear: both;"></div>
