--- a/index.html
+++ b/index.html
@@ -87,16 +87,15 @@
     
     <div class="right" id="rightpane">
         <p class="obs">Note: Company names are translated when appropriate.</p>
-        <h3 class="work">IT Manager <span class="date">(2014 - Current)</span></h3>
-        <h3 class="work">Systems Analyst <span class="date">(2012 - Current)</span></h3>
+        <h3 class="work">Systems Analyst & IT Manager <span class="date">(2012 - Current) </span></h3>
         <p class="place">CIGA - Public Administration IT Consortium - Santa Catarina, Brazil</p>
-        <p>Roles as IT Manager:</p>
+        <p>Roles as IT Manager (2014 - 2015):</p>
         <ul>
             <li>General task assignment/scheduling of operations;</li>
             <li>Capacity planning and acquisitions;</li>
             <li>General project management.</li>
         </ul>
-        <p>Main accomplishments as Systems Analyst:</p>
+        <p>Main accomplishments as Systems Analyst (2012 to date):</p>
         <ul>
             <li>Deployed company's internal GroupWare system and all it's dependencies;</li>
             <li>Developed a publishing system for local government public documents with advanced 
@@ -109,6 +108,8 @@
             <li>Network and systems administration of both cloud and dedicated hosts;</li>
             <li>User training.</li>
         </ul>
+        
+        <p><b></b>Key technologies:</b> LAMP Stack plus Bootstrap, MongoDB, Many JS tools (including JQuery), Datatables, Shell scripting, SoLR</p>
 
         <h3 class="work">C++ Teacher <span class="date">(2014)</span></h3>
         <p class="place">SENAI/SC - Serviço Nacional de Aprendizagem Industrial - Santa Catarina, Brazil</p>
